Fixed sizes on small devices

--- a/client/app/styles/_vars.scss
+++ b/client/app/styles/_vars.scss
@@ -18,6 +18,7 @@ $panel-border-color: #181818;
 // document sizing
 $doc-min-height: 300px;
 $doc-min-width: 320px;
+
 // spacing
 $full-space: 40px;
 $half-space: 20px;
@@ -40,6 +41,7 @@ $header-height: 80px;
 $filter-bar-width: 225px;
 $event-playlist-width: 300px;
 $mobile-break-width: 1000px;
+$tiny-break-width: 550px;
 
 // Header sizing
 $header-button-width: 50px;
